--- a/Iris.ipynb
+++ b/Iris.ipynb
@@ -122,7 +122,7 @@
    "source": [
     "#Model persistence\n",
     "from sklearn.externals import joblib\n",
-    "joblib.dump(knn, 'mlbrain.joblib') #save the trained model in a binary file and use that file for predications"
+    "joblib.dump(knn, 'mlbrain.joblib') #save the trained model in a binary file and use that file for predictions"
    ]
   },
   {
